tests/negative/test_cn_asgn_cn_arr.orb
fnc main() () {
    let array:(i32 4 cn) (arr (i32 4) 0 1 2 3);
    = ([] array 0) 100;
};